// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text > it works with defaults 1`] = `
<div
  class="_Text_c6fd40"
  data-testid="Text"
>
  Hello world
</div>
`;

exports[`Text > it works with paragraphs 1`] = `
<div
  class="_Text_c6fd40"
  data-testid="Text"
>
  <p>
    Hello world
  </p>
  <p>
    Hello world
  </p>
  <p>
    Hello world
  </p>
</div>
`;
